# koyomi

./: .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  README.md  lsmcp.schema.json
.github/workflows/: ci.yml
crates/koyomi/: Cargo.toml
crates/koyomi-core/: Cargo.toml
crates/koyomi-core/src/: auth.rs  lib.rs
crates/koyomi/src/: cli.rs  lib.rs  main.rs
