[workspace]
resolver = "3"
members = ["crates/*"]

[workspace.package]
version = "0.1.0"
authors = ["kohdice <kohdice.biz@gmail.com>"]
edition = "2024"
rust-version = "1.91"
license = "MIT"
repository = "https://github.com/kohdice/koyomi"

[workspace.dependencies]
# local crates
koyomi-core = { path = "./crates/koyomi-core" }
