[package]
name = "koyomi"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "koyomi"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap = { version = "4.5.52", features = ["derive"] }
koyomi-core.workspace = true
